<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/background_color"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/txtlevel"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/app_padding"
            android:paddingVertical="@dimen/word_level_padding"
            android:layout_marginEnd="@dimen/list_collapse"
            android:layout_marginBottom="@dimen/word_item_distance"
            android:textSize="@dimen/text_h2"
            android:text="@string/txt_level"
            android:textStyle="bold"
            android:background="@drawable/item_radius_start"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/word_item_distance"
        android:background="@drawable/item_radius_end"
        android:orientation="vertical"
        android:backgroundTint="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:backgroundTint="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_word"
                android:id="@+id/txtword"
                android:paddingHorizontal="@dimen/list_collapse"
                android:textSize="@dimen/text_h4"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                android:gravity="bottom"/>
            <TextView
                android:id="@+id/txtfuri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/txt_furigana"
                android:gravity="bottom"
                android:textSize="@dimen/text_h5"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/txt_meanning"
            android:textSize="@dimen/text_h5"
            />


    </LinearLayout>


</LinearLayout>