<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_bar_height"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/btn_back_size"
            android:layout_height="@dimen/btn_back_size"
            android:layout_gravity="center"
            android:background="@drawable/baseline_arrow_back_24"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="@dimen/app_margin"/>

        <TextView
            android:id="@+id/txtFolderName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtWord"
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/txt_word"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="@dimen/text_h1"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:background="@drawable/btn_radius"
                android:id="@+id/btnA"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_quiz_height"
                android:layout_gravity="center"
                android:padding="@dimen/app_padding"
                android:layout_margin="@dimen/app_margin"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/txt_meanning"
                android:textSize="@dimen/text_h5"/>
            <Button
                android:background="@drawable/btn_radius"
                android:id="@+id/btnB"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_quiz_height"
                android:layout_gravity="center"
                android:padding="@dimen/app_padding"
                android:layout_margin="@dimen/app_margin"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/txt_meanning"
                android:textSize="@dimen/text_h5"/>

        </LinearLayout>
        <LinearLayout
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:background="@drawable/btn_radius"
                android:id="@+id/btnC"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_quiz_height"
                android:layout_gravity="center"
                android:padding="@dimen/app_padding"
                android:layout_margin="@dimen/app_margin"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/txt_meanning"
                android:textSize="@dimen/text_h5"/>

            <Button
                android:background="@drawable/btn_radius"
                android:id="@+id/btnD"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_quiz_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/app_margin"
                android:layout_weight="1"
                android:padding="@dimen/app_padding"
                android:text="@string/txt_meanning"
                android:textAllCaps="false"
                android:textSize="@dimen/text_h5"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:background="@drawable/btn_radius"
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/app_padding"
            android:paddingHorizontal="@dimen/btn_next_padding_hor"
            android:layout_margin="@dimen/app_margin"
            android:text="@string/btn_next"
            android:textSize="@dimen/text_h5"/>
    </LinearLayout>

</LinearLayout>